refactor(ScoreboardConfig): use list instead immutable list